--- a/app/src/main/res/layout/food_entry.xml
+++ b/app/src/main/res/layout/food_entry.xml
@@ -35,7 +35,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_space" />
+        app:layout_constraintTop_toBottomOf="@+id/name_of_food_editText" />
 
     <ImageButton
         android:id="@+id/cal_add_btn"
@@ -48,7 +48,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/calories_title"
         app:srcCompat="@android:drawable/arrow_up_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/cal_count"
@@ -72,16 +73,17 @@
         app:layout_constraintStart_toEndOf="@+id/calories_title"
         app:layout_constraintTop_toTopOf="@+id/calories_title"
         app:srcCompat="@android:drawable/arrow_down_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/net_carbs_title"
+        android:id="@+id/carbs_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="250dp"
-        android:text="@string/net_carbs"
+        android:text="@string/carbs"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -98,9 +100,10 @@
         android:onClick="net_carbs_add"
         android:background="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/net_carbs_title"
+        app:layout_constraintTop_toTopOf="@+id/carbs_title"
         app:srcCompat="@android:drawable/arrow_up_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/carbs_count"
@@ -111,7 +114,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/net_carbs_add_btn"
         app:layout_constraintStart_toEndOf="@+id/net_carbs_min_btn"
-        app:layout_constraintTop_toTopOf="@+id/net_carbs_title" />
+        app:layout_constraintTop_toTopOf="@+id/carbs_title" />
 
     <ImageButton
         android:id="@+id/net_carbs_min_btn"
@@ -121,10 +124,11 @@
         android:layout_marginTop="-12dp"
         android:onClick="net_carbs_min"
         android:background="@color/grey"
-        app:layout_constraintStart_toEndOf="@+id/net_carbs_title"
-        app:layout_constraintTop_toTopOf="@+id/net_carbs_title"
+        app:layout_constraintStart_toEndOf="@+id/carbs_title"
+        app:layout_constraintTop_toTopOf="@+id/carbs_title"
         app:srcCompat="@android:drawable/arrow_down_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/fats_title"
@@ -139,7 +143,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/net_carbs_title" />
+        app:layout_constraintTop_toBottomOf="@+id/carbs_title" />
 
     <ImageButton
         android:id="@+id/fats_add_btn"
@@ -152,7 +156,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fats_title"
         app:srcCompat="@android:drawable/arrow_up_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/fats_count"
@@ -176,7 +181,8 @@
         app:layout_constraintStart_toEndOf="@+id/fats_title"
         app:layout_constraintTop_toTopOf="@+id/fats_title"
         app:srcCompat="@android:drawable/arrow_down_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/water_title"
@@ -205,7 +211,8 @@
         android:background="@color/grey"
         app:layout_constraintTop_toTopOf="@+id/water_title"
         app:srcCompat="@android:drawable/arrow_up_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/water_count"
@@ -229,7 +236,8 @@
         app:layout_constraintStart_toEndOf="@+id/water_title"
         app:layout_constraintTop_toTopOf="@+id/water_title"
         app:srcCompat="@android:drawable/arrow_down_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/protein_title"
@@ -257,7 +265,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/protein_title"
         app:srcCompat="@android:drawable/arrow_up_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/protein_count"
@@ -281,7 +290,8 @@
         app:layout_constraintStart_toEndOf="@+id/protein_title"
         app:layout_constraintTop_toTopOf="@+id/protein_title"
         app:srcCompat="@android:drawable/arrow_down_float"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/food_entry_btn"
@@ -344,6 +354,38 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/horizontal_space2"/>
+
+    <TextView
+        android:id="@+id/name_of_food"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/name_of_food"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/horizontal_space"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="250dp"
+        />
+
+    <EditText
+        android:id="@+id/name_of_food_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="text"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/name"
+        app:layout_constraintStart_toEndOf="@id/name_of_food"
+        app:layout_constraintTop_toTopOf="@id/name_of_food"
+        app:layout_constraintBottom_toBottomOf="@id/name_of_food"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="463dp"
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
